alterei o cenas outra vez

--- a/alunos/12.html
+++ b/alunos/12.html
@@ -22,5 +22,6 @@
     <img src="../imagens/aluno1.jpg" alt="Aluno 1">
     <p>Pedro Pereira</p>
     <p>EFA Programador | Nº12</p>
+    <p>Segunda tentiva</p>
 </body>
 </html>
